--- a/.github/workflows/main_invoicemanager-mvc.yml
+++ b/.github/workflows/main_invoicemanager-mvc.yml
@@ -13,34 +13,40 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET Core
+      - name: Set up .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.x'
+          dotnet-version: '7.x'
+
+      - name: Restore dependencies
+        working-directory: WebApplication1
+        run: dotnet restore WebApplication1.csproj
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        working-directory: WebApplication1
+        run: dotnet build WebApplication1.csproj --configuration Release --no-restore
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        working-directory: WebApplication1
+        run: dotnet publish WebApplication1.csproj -c Release -o "${{ env.DOTNET_ROOT }}/myapp" --no-restore
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{ env.DOTNET_ROOT }}/myapp
 
   deploy:
     runs-on: windows-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # This is required for requesting the JWT
+      contents: read # This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -62,4 +68,3 @@ jobs:
           app-name: 'invoicemanager-mvc'
           slot-name: 'Production'
           package: .
-          
