conn str update

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CourseConnectionString": "Server=localhost\\MSSQLSERVER03;Database=CUS;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True;"
+    "CourseConnectionStringlocal": "Server=localhost\\MSSQLSERVER03;Database=CUS;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True;"
   }
 }
  
